<resources>
    <string name="app_name">MarvelProject</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="title">Title</string>
    <string name="details">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="name_character_item">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_ethernet">Verique sua internet e tente novamente.</string>
    <string name="connection_error">Erro de conexão!</string>
    <string name="confirm">Confirmar</string>
    <string name="marvel_title">MARVEL</string>
    <string name="internet_connection_error">Erro de conexão</string>
    <string name="try_again_message">Tente Novamente</string>
    <string name="try_again_button">Tentar Novamente</string>
    <string name="cancel_button">Cancelar</string>
    <string name="search">Pesquisar</string>
    <string name="confirmation">Confirmação</string>
    <string name="delete_character_question">Tem certeza que gostaria de deletar este personagem?</string>
    <string name="delete_button">Deletar</string>
    <string name="no_button">Não</string>
    <string name="user_hint">Usuário</string>
    <string name="password_hint">Senha</string>
    <string name="button_login">LOGIN</string>
    <string name="create_account">Crie sua conta</string>
    <string name="next_button">Proximo</string>
    <string name="back_button">Voltar</string>
    <string name="confirm_email">Confirme o E-mail:</string>
    <string name="email_text">Email:</string>
    <string name="full_name">Nome Completo:</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="password_text">Senha</string>
    <string name="create_password">Defina sua senha</string>
    <string name="go_to_home_button">Ir para a página inicial</string>
    <string name="welcome_text">Seja bem-vindo(A)</string>
    <string name="photo_later">Definir mais tarde</string>
    <string name="confirm_button">CONFIRMAR</string>
    <string name="register_text">Não possui uma conta? Registre-se</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_password">Senha inválida</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="small_password">Senha deve possuir 8 caracteres</string>
    <string name="valid_name">Digite um nome válido</string>
    <string name="passwordsArentTheSame">Senhas não são iguais</string>
    <string name="fab_favoritado">Favoritado</string>
    <string name="fab_favoritar">Favoritar</string>
</resources>