<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".view.login.register.fragment.photo.PhotoFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/register_pick_your_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="ESCOLHA SUA FOTO"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/register_cardview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="200dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintBottom_toTopOf="@+id/next_button_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_pick_your_photo"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <ImageView
            android:id="@+id/register_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/register_image" />

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/register_choose_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/photo_later"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_cardview" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="#DA0910"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="24dp"
        android:elevation="4dp"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_button_photo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MarvelProject.Button.Cut"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#DA0910"
        android:elevation="4dp"
        android:text="@string/confirm_button"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@+id/back_button_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/back_button_photo"
        app:layout_constraintTop_toTopOf="@+id/back_button_photo"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MarvelProject.Button.Cut"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>